<resources>
    <string name="app_name">KanTask</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="button_enter">Entrar</string>
    <string name="error_connection">Ops! Ocoreu um erro na conexão com a internet</string>
    <string name="error_request">Ops! Ocorreu um erro ao realizar a requisição</string>
    <string name="label_error_invalid_response">Droga! Resposta inválida</string>
    <string name="hint_username">Digite seu usuário</string>
    <string name="hint_password">Digite sua senha</string>
    <string name="message_wait">Por favor, aguarde!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_descricao">Informe o nome da tarefa</string>
    <string name="hint_prazo">Informe o prazo de conclusão</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="button_save">Salvar</string>
    <string name="text_normal">Normal</string>
    <string name="text_media">Média</string>
    <string name="text_alta">Alta</string>
    <string name="label_prioridade">Prioridade</string>
    <string name="choose_category_dialog">Mover</string>
    <string name="fazer">A Fazer</string>
    <string name="fazendo">Fazendo</string>
    <string name="feito">Feito</string>
    <string name="cancel">Cancelar</string>
    <string name="ok">Ok</string>
    <string name="hint_card">Tarefa</string>
    <string name="descricao_error">Informe a descrição</string>
    <string name="data_error">Informe o Prazo de Conclusão</string>
    <string name="button_cancel">Cancelar</string>

</resources>
