<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:padding="8dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/container_descricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:paddingLeft="4dp"
        android:paddingRight="4dp">

        <EditText
            android:id="@+id/input_descricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_descricao"
            android:inputType="textNoSuggestions"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/container_prazo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/container_descricao"
        android:background="@android:color/white"
        android:paddingLeft="4dp"
        android:paddingRight="4dp">

        <EditText
            android:id="@+id/input_prazo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_prazo"
            android:inputType="date"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/label_priori"
        android:layout_below="@id/container_prazo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_margin="8dp"
        android:textStyle="bold"
        android:text="Prioridade"
        android:labelFor="@id/radioGroup"
        />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="90dp"
        android:layout_below="@+id/label_priori"
        android:weightSum="1"
        android:orientation="horizontal"
        android:id="@+id/radioGroup">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Normal"
            android:id="@+id/radioButton"
            android:layout_gravity="center_horizontal"
            android:checked="true"
            android:textSize="25dp"
            android:layout_weight="0.13"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Média"
            android:id="@+id/radioButton2"
            android:layout_gravity="center_horizontal"
            android:checked="false"
            android:textSize="25dp"
            android:layout_weight="0.13" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Alta"
            android:id="@+id/radioButton3"
            android:layout_gravity="center_horizontal"
            android:checked="false"
            android:textSize="25dp"
            android:layout_weight="0.13" />
    </RadioGroup>

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/button_save"
        android:layout_below="@id/radioGroup"
        android:padding="8dp" />

</RelativeLayout>